fix: formulaire et main.py compatibles, appel IA fonctionnel

--- a/templates/planing.html
+++ b/templates/planing.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Votre Planning</title>
+    <title>Mon Planning</title>
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-    <h1>Planning généré</h1>
+    <h1>Ton planning nutritionnel personnalisé</h1>
     <div>
         <pre>{{ planning }}</pre>
     </div>
-    <a href="/">⬅ Retour à l’accueil</a>
+    <a href="/">Retour à l'accueil</a>
 </body>
 </html>
