feat: ajout page training avec IA coordonnée au planning nutritionnel

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
             <a href="/formulaire" class="btn">📝 Remplir le formulaire</a>
             <a href="/planning" class="btn">📅 Voir le planning</a>
             <a href="/liste" class="btn">🛒 Voir la liste de courses</a>
+            <a href="/training" class="button">Voir mon entraînement</a>
         </div>
     </div>
 </body>
