fix: correction du lien cassé vers /formulaire

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         <p class="subtitle">Choisis une action :</p>
 
         <div class="button-grid">
-            <a href="/formulaire" class="btn">📝 Remplir le formulaire</a>
+            <a href="/">Remplir le formulaire</a>
             <a href="/planning" class="btn">📅 Voir le planning</a>
             <a href="/liste" class="btn">🛒 Voir la liste de courses</a>
             <a href="/training" class="button">Voir mon entraînement</a>
