--- a/static/style.css
+++ b/static/style.css
@@ -119,3 +119,7 @@ input:focus, select:focus {
     border-color: #fdd835;
     box-shadow: 0 0 5px #fdd835;
 }
+/* Correction visibilité texte planning */
+.planning-box pre {
+    color: #f5f5f5;
+}
