--- a/static/style.css
+++ b/static/style.css
@@ -121,5 +121,5 @@ input:focus, select:focus {
 }
 /* Correction visibilité texte planning */
 .planning-box pre {
-    color: #f5f5f5;
+    color: #0e0a0a;
 }
