--- a/static/style.css
+++ b/static/style.css
@@ -9,7 +9,7 @@ body, h1, h2, h3, p, ul, ol, li, a {
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #1e1e1e;
-    color: #f5f5f5;
+    color: #0c0a0a;
     line-height: 1.6;
     padding: 20px;
 }
