feat: ajout de la page remarque pour la régénération intelligente de la semaine

--- a/templates/planning.html
+++ b/templates/planning.html
@@ -47,6 +47,7 @@
         <div class="actions">
             <a href="/">🏠 Accueil</a>
             <a href="/liste">🛒 Voir la liste de courses</a>
+            <a href="/remarque">🆕 Nouvelle semaine</a>
         </div>
     </div>
 </body>
