fix: redirection accueil vers /accueil + gestion utilisateurs multiples

--- a/templates/coach.html
+++ b/templates/coach.html
@@ -17,7 +17,7 @@
             <pre>{{ reponse }}</pre>
         </div>
 
-        <a href="/" class="button">🏠 Retour à l’accueil</a>
+        <a href="/accueil" class="button">🏠 Retour à l’accueil</a>
     </div>
 </body>
 </html>
