--- a/templates/formulaire.html
+++ b/templates/formulaire.html
@@ -72,6 +72,8 @@
         </div>
     </form>
 
+    <a href="/accueil" class="button">🏠 Retour à l’accueil</a>
+
     <script>
         let currentStep = 0;
         const steps = document.querySelectorAll(".step");
