--- a/templates/planning.html
+++ b/templates/planning.html
@@ -45,7 +45,7 @@
         {% endfor %}
 
         <div class="actions">
-            <a href="/">🏠 Accueil</a>
+            <a href="/accueil">🏠 Accueil</a>
             <a href="/liste">🛒 Voir la liste de courses</a>
             <a href="/remarque">🆕 Nouvelle semaine</a>
         </div>
