--- a/templates/training.html
+++ b/templates/training.html
@@ -11,6 +11,6 @@
         <pre>{{ training }}</pre>
     </div>
     <br>
-    <a href="/" class="button">Retour à l'accueil</a>
+    <a href="/accueil" class="button">Retour à l'accueil</a>
 </body>
 </html>
