--- a/templates/liste.html
+++ b/templates/liste.html
@@ -15,7 +15,7 @@
         </div>
 
         <div class="button-group">
-            <a href="/" class="button">🏠 Retour à l’accueil</a>
+            <a href="/accueil" class="button">🏠 Retour à l’accueil</a>
             <a href="/planning" class="button secondary">📅 Voir le planning</a>
         </div>
     </div>
